
[project]
name = "pos-ecod"
version = "1.0.0"
description = "POS 시스템/하드웨어 지표 기반 PyOD ECOD 이상탐지 에이전트 (MVP, --mock 지원)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Hosuk + ChatGPT" }]

dependencies = [
  "pyod>=2.0.1",
  "numpy>=1.24,<3",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "psutil>=5.9",
  "joblib>=1.3",
  "rich>=13.7",
]

[project.scripts]
pos-ecod = "pos_ecod.agent:cli"
